--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,36 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Class Selector */
+
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: aquamarine;
+    color: black;
+}
+
+
 main {
     max-width: 840px;
+    position: relative;
     }
 
 aside {
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
     text-align: center;
+    position: relative;
     }
+
+aside h2 {
+    position: absolute;
+    top: 50px;
+    left: 100px;
+}
 
 aside img {
     width: 200px;
@@ -20,6 +40,7 @@ aside img {
 main img {
     width: 150px;
     height: auto;
+    float: right;
     }
 
 p {
