--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,8 @@ aside {
 
 aside h2 {
     position: absolute;
-    top: 50px;
+    color: rgb(177, 27, 27);
+    top: 15px;
     left: 100px;
 }
 
