article h1 center align

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -79,7 +79,12 @@ div.hero {
 
 .hero h1 {
     position: absolute;
-    top: 0;
+    top: 6rem;
+    text-align: center;
+    max-width: 100%;
+    width: 100%;
+    padding: 1% 0;
+    background-color: #8d8e8eb2;
 }
 
 .hero img {
