--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -97,3 +97,24 @@ div.hero {
     width: 100%;
     max-width: 50px;
 }
+
+header {
+    margin: 1rem auto;
+	display: grid;
+	grid-template-columns: 120px 1fr 2fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	max-width: 1000px;
+    justify-items: space-between;
+}
+
+header img {
+    margin: 0 0.25rem 0 1rem;
+	width: 100px;
+	height: auto;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-between;
+}
