added grid to header

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -101,8 +101,9 @@ div.hero {
 header {
     margin: 1rem auto;
 	display: grid;
-	grid-template-columns: 120px 1fr 2fr;
+	grid-template-columns: 1fr 1fr;
 	align-items: center;
+    justify-content: center;
 	border-bottom: 1px solid #ccc;
 	max-width: 1000px;
     justify-items: space-between;
