--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -117,3 +117,13 @@ header nav {
     display: flex;
     justify-content: space-between;
 }
+
+.adventure {
+    display: flex;
+}
+
+.adventure img {
+    width: 100%;
+    max-width: 250px;
+    height: 100%;
+}
