--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -37,7 +37,7 @@ p {
 div.sociallinks {
     background-color: var(--nav-background-color);
     width: 100%;
-    
+    height: 80px;
 }
 
 nav a {
@@ -61,7 +61,6 @@ nav.sociallinks a{
 }
 
 nav.sociallinks{
-    font-size: 1.2rem;
     display: flex;
     float: right;
 }
