--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -34,11 +34,12 @@ p {
     padding: 25px;
 }
 
-div.sociallinks {
+nav {
     background-color: var(--nav-background-color);
     width: 100%;
-    height: 85px;
+    display: flex;
 }
+
 
 nav a {
     display: block;
@@ -60,11 +61,14 @@ nav.sociallinks a{
     text-decoration: none;
 }
 
-nav.sociallinks{
-    display: flex;
+div.sociallinks {
+    background-color: var(--nav-background-color);
+    width: 100%;
+    height: 85px;
+}
+nav.sociallinks {
     float: right;
 }
-
 
 div.hero {
     position: relative;
