--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -64,10 +64,8 @@ nav.sociallinks a{
 div.sociallinks {
     background-color: var(--nav-background-color);
     width: 100%;
-    height: 85px;
-}
-nav.sociallinks {
-    float: right;
+    display: flex;
+    justify-content: space-between;
 }
 
 div.hero {
