--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,13 @@ main {
     position: relative;
     }
 
+main h1 {
+    border-bottom: 1px solid;
+    padding: 10px;
+    font-weight: 500;
+    font-family: 'Segoe UI';
+}
+
 aside {
     width: 20rem;
     text-align: center;
@@ -48,21 +55,22 @@ p {
     padding: 0;
     }
 
-footer {
-    margin-top: 15px;
-    border-top: 1px solid #000;
-    text-align: center;
-    }
-
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 350;
+    font-family: 'Segoe UI';
     }
 
 h1 {
@@ -77,3 +85,30 @@ img {
     box-shadow: 0 0 30px gray;
     }
 
+header, footer, .grid {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+div.grid {
+    display: grid;
+    align-items: center;
+    border-bottom: 1px solid;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+footer {
+    text-align: center;
+    padding: 1rem;
+}
