--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -151,7 +151,7 @@ header nav {
 }
 
 section.reach {
-    background-color: var(--nav-background-color);
+    background-color: var(--accent2-color);
 }
 
 .reach {
@@ -197,6 +197,7 @@ div.reach p{
     color: white;
     padding: 0.5rem;
     border-radius: 0.5rem;
+    width: 50%;
 }
 
 .headquarters {
@@ -220,6 +221,7 @@ div.reach p{
 .emps {
     width: 30%;
     padding: 1rem 0;
+    margin: 2rem 0;
 }
 
 .empsholder img {
@@ -235,4 +237,80 @@ div.reach p{
 .form-item {
     display: grid;
     align-items: center;
+}
+
+label, input, button, select, textarea {
+    font-family: Roboto, Arial, sans-serif;
+    width: 100%;
+}
+
+input, select, textarea {
+    padding: 0.3rem;
+    font-size: 1.1rem;
+    border: 2px solid gray;
+    border-radius: 0.3rem;
+}
+
+input[type="textarea"] {
+    height: 100px;
+}
+
+button {
+    margin: 1rem 0;
+    background-color: navy;
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+}
+
+button:hover {
+    background-color: darkgreen;
+}
+
+.emailname {
+    display: flex;
+    justify-content: space-between;
+}
+.emailname > .form-item {
+    width: 45%;
+}
+
+.form {
+    background-color: var(--accent2-color);
+}
+
+.form h1, .form h2 {
+    color: var(--nav-link-color);
+}
+
+form > h1, p {
+    text-align: center;
+}
+
+form > .form-item {
+    margin: 1rem 0;
+}
+
+.radiobuttoncont {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-start;
+    margin: 1rem 0;
+}
+
+.radiobutton {
+    display: flex;
+    align-content: start;
+    align-items: center;
+}
+
+.radiobutton input{
+    height: 30px;
+    width: 20px;
+}
+
+.radiobutton > label {
+    padding-left: 1rem;
 }
