footer about us

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -324,7 +324,7 @@ form > .form-item {
     text-decoration: none;
 }
 
-footer.contact {
+footer {
     max-width: 1040px;
     margin: 1rem auto;
 }
