--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -16,8 +16,8 @@
 }
 
 main {
-	max-width: 980px;
-	margin: 2rem auto;
+	max-width: 1040px;
+	margin: 0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -120,7 +120,7 @@ div.hero {
     max-width: 50px;
 }
 
-header {
+header, .articles_cont {
     margin: 1rem auto;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -240,7 +240,7 @@ div.reach p{
     align-items: center;
 }
 
-label, input, button, select, textarea {
+label, input, button, select, textarea, p {
     font-family: Roboto, Arial, sans-serif;
     width: 100%;
 }
@@ -389,4 +389,44 @@ footer nav {
 
 .triph1 h1 {
     color: var(--nav-link-color);
+}
+
+.cta p {
+    padding: 1rem 0;
+    margin: 0 auto;
+    width: 50%;
+    background-color: var(--accent2-color);
+    padding: 3rem;
+    border-radius: 0.5rem;
+}
+
+.ctacont {
+    border: 1px solid var(--nav-link-color);
+    margin: 1rem auto;
+    padding: 2rem;
+}
+
+
+.articles_cont {
+    margin: 1rem auto;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+	border-bottom: 1px solid #ccc;
+	max-width: 1000px;
+    text-align: center;
+}
+
+.article_cards {
+    padding: 0 1rem;
+    height: 100%;
+}
+
+.article_cards img {
+    width: 100%;
+    height: 200px;
+}
+
+.nopad {
+    padding: 0;
 }
